Description
The Choose Icon dialog in shell32 does not work at all. It only works with explorer.exe and shell32.dll. Any other files it will not load the icons. Somewhat of an annoyance when I can only load icons from shell32 and explorer.
Attachments
Issue Links
- blocks
-
CORE-11407 ReactOS explorer can't change folders and shortcuts icons
-
- Resolved
-
-
CORE-8427 Desk.cpl doesn't have the option to change desktop icons
-
- Resolved
-
- is blocked by
-
CORE-10962 [shell32]: Use ExpandEnvironmentStringsW in pick icon dialog
-
- Resolved
-
- is duplicated by
-
CORE-14652 [SHELL32] PickIconDlg fails to show icons in specific cases
-
- Resolved
-
- relates to
-
CORE-10680 Cannot change the icon of shortcuts (reactos shows an empty icon list)
-
- Resolved
-
-
CORE-14974 Change Icon dialog now have 3 rows instead of 4
-
- Resolved
-
-
CORE-11792 [shell32] Improve the Choose Icon dialog
-
- Resolved
-