[SHELL32] Fix and improve the PickIconDlg function (#574)

CORE-10972